[package]
name = "old_swedish_dictionary"
version = "0.1.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/old-swedish-dictionary-rs"
description = """
Old Swedish Dictionary for Rust. From K.F. Söderwall's Medieval Swedish Dictionary
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]